--- a/blog/templates/includes/footer.html
+++ b/blog/templates/includes/footer.html
@@ -10,11 +10,11 @@
             <div class="cuadro_intro_hover " style="background-color:#cccccc;">
               <p style="text-align:center; margin-top:20px;">
                 <img src="#" class="img-responsive" alt="">
-              </p>
+              </p>q
               <div class="caption">
                 <div class="blur"></div>
                 <div class="caption-text">
-                  <h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">THIS IS H3</h3>
+                  <h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">About this blog</h3>
                   <p>Loren ipsum dolor si amet ipsum dolor si amet ipsum dolor...</p>
                   <a class=" btn btn-default" href="#"><span class="glyphicon glyphicon-plus"> INFO</span></a>
                 </div>
@@ -30,7 +30,7 @@
               <div class="caption">
                 <div class="blur"></div>
                 <div class="caption-text">
-                  <h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">THIS IS H3</h3>
+                  <h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">What is my blog?</h3>
                   <p>Loren ipsum dolor si amet ipsum dolor si amet ipsum dolor...</p>
                   <a class=" btn btn-default" href="#"><span class="glyphicon glyphicon-plus"> INFO</span></a>
                 </div>
